cloudflare/cloudflare-service.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.devtechdojo.com.br`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    options:
      name: default-tls-options
      namespace: kube-system
    secretName: cloudflare-cert
